# fep3_encoded_video

./: CMakeLists.txt  README.md  conanfile.py
build_profiles/: linux_armv8_gcc10  linux_armv8_gcc9  linux_gcc_10  linux_gcc_9  win_142
build_profiles/armv8_docker/: dockerfile
src/: CMakeLists.txt
src/example/: CMakeLists.txt  core_receiver_main.cpp  core_sender_main.cpp  video.h  video_player.cpp  video_sender.cpp
src/fep_enc_video/: CMakeLists.txt  fep3_participant.fep_components  fep_encoded_video.cpp  fep_encoded_video.h  fep_encoded_video_component.h  fep_ev_plugin.cpp
src/ffmpeg-playground/: CMakeLists.txt  main.cpp
src/ffmpeg-playground/hw_decode/: CMakeLists.txt  main.cpp
src/ffmpeg-playground/player/: CMakeLists.txt  Player.cpp  Player.h  main.cpp  player-sdl.c  stdafx.h
src/ffmpeg-playground/record_camera/: CMakeLists.txt  main.cpp
src/qt_playground/: CMakeLists.txt  main.cpp
